--- a/package.json
+++ b/package.json
@@ -8,30 +8,31 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "@clerk/nextjs": "^5.0.0-beta.35",
-        "@fortawesome/fontawesome-svg-core": "^6.6.0",
-        "@fortawesome/free-brands-svg-icons": "^6.6.0",
-        "@fortawesome/free-solid-svg-icons": "^6.6.0",
-        "@fortawesome/react-fontawesome": "^0.2.2",
-        "@radix-ui/react-dialog": "^1.0.5",
-        "@radix-ui/react-dropdown-menu": "^2.0.6",
-        "@radix-ui/react-popover": "^1.0.7",
-        "@radix-ui/react-slot": "^1.0.2",
-        "@radix-ui/react-toast": "^1.1.5",
-        "@stream-io/node-sdk": "^0.1.12",
-        "@stream-io/video-react-sdk": "^0.5.1",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.0",
-        "date-fns": "^3.4.0",
-        "lucide-react": "^0.350.0",
-        "next": "14.1.3",
-        "react": "^18",
-        "react-datepicker": "^6.3.0",
-        "react-dom": "^18",
-        "react-toastify": "^10.0.5",
-        "tailwind-merge": "^2.2.1",
-        "tailwindcss-animate": "^1.0.7",
-        "uuid": "^9.0.1"
+  "dependencies": {
+    "@clerk/nextjs": "^5.0.0-beta.35",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@stream-io/node-sdk": "^0.1.12",
+    "@stream-io/video-react-sdk": "^0.5.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.4.0",
+    "lucide-react": "^0.350.0",
+    "next": "14.1.3",
+    "react": "^18",
+    "react-datepicker": "^6.3.0",
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -51,3 +52,4 @@
     "typescript": "^5"
   }
 }
+
