--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-tailwindcss": "^3.14.3",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
